# crewai_for_joking

./: README.md  pyproject.toml
src/crew_day_02/: crew.py  main.py  rapport.md
src/crew_day_02/config/: agents.yaml  tasks.yaml
