[project]
name = "crew_day_02"
version = "0.1.0"
description = "crew_day_02 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
crew_day_02 = "crew_day_02.main:run"
run_crew = "crew_day_02.main:run"
train = "crew_day_02.main:train"
replay = "crew_day_02.main:replay"
test = "crew_day_02.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
